--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>John-Marco</title>
 </head>
 <body>
-    <h1>Hi</h1>
+    <h1><a href="veterinaryAdventure">Vet Game</a></h1>
+    <h1><a>Vet Game</a></h1>
 </body>
 </html>
