--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>John-Marco</title>
 </head>
 <body>
-    <h1><a href="veterinaryAdventure">Vet Game</a></h1>
-    <h1><a>Vet Game</a></h1>
+    <h1><a href="VeterinaryAdventures">Vet Game</a></h1>
+    <h1><a href="Philosophy-website">Philosophy website</a></h1>
 </body>
 </html>
