--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1><a href="VeterinaryAdventures">Vet Game</a></h1>
     <h1><a href="Philosophy-website">Philosophy website</a></h1>
+    <h1><a href="studying">Study flashcards</a></h1>
 </body>
 </html>
