added math chalk board

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1><a href="VeterinaryAdventures">Vet Game</a></h1>
     <h1><a href="Philosophy-website">Philosophy website</a></h1>
     <h1><a href="studying">Study flashcards</a></h1>
+    <h1><a href="mathChalkBoard">Math chalk board</a></h1>
 </body>
 </html>
