--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1><a href="Philosophy-website">Philosophy website</a></h1>
     <h1><a href="studying">Study flashcards</a></h1>
     <h1><a href="mathChalkBoard">Math chalk board</a></h1>
+    <h1><a href="p5Projects">Projects made in p5.js<a></h1>
 </body>
 </html>
