--- a/index.html
+++ b/index.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>My first three.js app</title>
-		<style>
-			body { margin: 0; padding: 0; overflow:hidden},
-			*{ margin: 0; padding: 0, overflow:hidden}
-		</style>
-		<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-
-		<script type="importmap">
-			{
-						"imports": {
-									"three": "https://unpkg.com/three@0.152.2/build/three.module.js",
-												"three/addons/": "https://unpkg.com/three@<version>/examples/jsm/"
-														}
-															}
-		</script>
-	</head>
-	<body>
-		<script type="module" src="main.js"></script>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <title>John-Marco</title>
+</head>
+<body>
+    <h1><a href="VeterinaryAdventures">Vet Game</a></h1>
+    <h1><a href="Philosophy-website">Philosophy website</a></h1>
+    <h1><a href="studying">Study flashcards</a></h1>
+    <h1><a href="mathChalkBoard">Math chalk board</a></h1>
+    <h1><a href="p5Projects">Projects made in p5.js<a></h1>
+</body>
 </html>
