--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>John-Marco</title>
-</head>
-<body>
-    <h1><a href="VeterinaryAdventures">Vet Game</a></h1>
-    <h1><a href="Philosophy-website">Philosophy website</a></h1>
-    <h1><a href="studying">Study flashcards</a></h1>
-    <h1><a href="mathChalkBoard">Math chalk board</a></h1>
-    <h1><a href="p5Projects">Projects made in p5.js<a></h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>John-Marco</title>
+    </head>
+    <link rel="stylesheet" href="style.css">
+    <body>
+        <nav>
+            <a href="VeterinaryAdventures">Vet Game</a>
+            <a href="Philosophy-website">Philosophy website</a>
+            <a href="studying">Study flashcards</a>
+            <a href="mathChalkBoard">Math chalk board</a>
+            <a href="p5Projects">Projects made in p5.js</a>
+                </nav>
+        <div id="show-case">
+            <iframe src="Philosophy-website" title="My projects" id="frame"></iframe>
+        </div>
+    </body>
+    <script>
+        let list = [
+            "VeterinaryAdventures",
+            "Philosophy-website",
+            "studying",
+            "mathChalkBoard",
+            "p5Projects"
+        ];
+    </script>
 </html>
