--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>John-Marco</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
     </head>
-    <link rel="stylesheet" href="style.css">
     <body>
         <nav>
             <a id="VeterinaryAdventures" href="VeterinaryAdventures">Vet Game</a>
