--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <nav>
             <a id="VeterinaryAdventures" href="VeterinaryAdventures">Vet Game</a>
             <a id="Philosophy-website" href="Philosophy-website">Philosophy website</a>
-            <a id="mathChalkBoard" href="mathChalkBoard">Math chalk board</a>
+            <a id="drawing_app" href="drawing_app">Developer Drawing App</a>
             <a id="p5Projects" href="p5Projects">Projects made in p5.js</a>
+            <a id="petAdoption" href="petAdoption">Pet Adoption Website</a>
                 </nav>
         <div id="show-case">
             <iframe src="p5Projects" title="My projects" id="frame"></iframe>
