--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             <a id="Philosophy-website" href="Philosophy-website">Philosophy website</a>
             <a id="drawing_app" href="drawing_app">Developer Drawing App</a>
             <a id="p5Projects" href="p5Projects">Projects made in p5.js</a>
-            <a id="petAdoption" href="petAdoption">Pet Adoption Website</a>
                 </nav>
         <div id="show-case">
             <iframe src="p5Projects" title="My projects" id="frame"></iframe>
@@ -22,7 +21,7 @@
         const list = [
             "VeterinaryAdventures",
             "Philosophy-website",
-            "mathChalkBoard",
+            "drawing_app",
             "p5Projects",
         ];
 
