--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
         </div>
     </body>
     <script>
-        const list = [
-            "VeterinaryAdventures",
-            "Philosophy-website",
-            "drawing_app",
-            "p5Projects",
-        ];
+        const aTags = document.querySelectorAll("a");
+        const list = [ ];
+        aTags.forEach(tag => list.push(tag.id));
+        console.log(list);
 
 
         let frame = document.getElementById("frame");
