--- a/index.html
+++ b/index.html
@@ -2,61 +2,145 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>John-Marco</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>John-Marco | Portfolio</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <nav>
-            <a id="VeterinaryAdventures" href="VeterinaryAdventures">Vet Game</a>
-            <a id="Philosophy-website" href="Philosophy-website">Philosophy website</a>
-            <a id="drawing_app" href="drawing_app">Developer Drawing App</a>
-            <a id="p5Projects" href="p5Projects">Projects made in p5.js</a>
-            <a id="snooker" href="snooker">Snooker game</a>
-                </nav>
-        <div id="show-case">
-            <iframe src="p5Projects" title="My projects" id="frame"></iframe>
-        </div>
+        <div class="grain"></div>
+
+        <header>
+            <div class="header-content">
+                <div class="logo">JM</div>
+                <nav class="header-nav">
+                    <a href="https://github.com/johnmarco123" target="_blank" rel="noopener">GitHub</a>
+                </nav>
+            </div>
+        </header>
+
+        <section class="hero">
+            <p class="hero-greeting">Hi, I'm</p>
+            <h1 class="hero-name">John-Marco</h1>
+            <p class="hero-tagline">Developer &amp; Creator</p>
+            <div class="scroll-hint">
+                <span>Explore my work</span>
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M7 13l5 5 5-5M7 6l5 5 5-5"/>
+                </svg>
+            </div>
+        </section>
+
+        <section class="projects">
+            <h2 class="section-title">Projects</h2>
+
+            <div class="project-nav">
+                <button class="project-card active" data-project="p5Projects">
+                    <span class="card-icon">&#9670;</span>
+                    <span class="card-label">p5.js Projects</span>
+                    <span class="card-tech">JavaScript, p5.js</span>
+                </button>
+                <button class="project-card" data-project="VeterinaryAdventures">
+                    <span class="card-icon">&#9672;</span>
+                    <span class="card-label">Vet Game</span>
+                    <span class="card-tech">Game Development</span>
+                </button>
+                <button class="project-card" data-project="Philosophy-website">
+                    <span class="card-icon">&#9673;</span>
+                    <span class="card-label">Philosophy Website</span>
+                    <span class="card-tech">Web Design</span>
+                </button>
+                <button class="project-card" data-project="drawing_app">
+                    <span class="card-icon">&#9998;</span>
+                    <span class="card-label">Drawing App</span>
+                    <span class="card-tech">Canvas, JavaScript</span>
+                </button>
+                <button class="project-card" data-project="snooker">
+                    <span class="card-icon">&#9679;</span>
+                    <span class="card-label">Snooker Game</span>
+                    <span class="card-tech">Physics, Game Dev</span>
+                </button>
+            </div>
+
+            <div class="showcase">
+                <div class="showcase-frame">
+                    <div class="showcase-bar">
+                        <span class="dot red"></span>
+                        <span class="dot yellow"></span>
+                        <span class="dot green"></span>
+                        <span class="showcase-url" id="showcase-url">p5Projects</span>
+                    </div>
+                    <iframe src="p5Projects" title="Project preview" id="frame"></iframe>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <p>&copy; 2025 John-Marco. Built with passion.</p>
+        </footer>
     </body>
     <script>
-        const aTags = document.querySelectorAll("a");
-        const list = [ ];
-        aTags.forEach(tag => list.push(tag.id));
-        console.log(list);
+        const cards = document.querySelectorAll(".project-card");
+        const projects = [];
+        cards.forEach(card => projects.push(card.dataset.project));
 
+        const frame = document.getElementById("frame");
+        const showcaseUrl = document.getElementById("showcase-url");
+        frame.style.opacity = 1;
 
-        let frame = document.getElementById("frame");
-        frame.style.opacity = 1; 
         let hovered = undefined;
         let index = 0;
         let fading_in_timer, fading_out_timer;
         const fade_time = 800;
         let swapping = false;
 
-        for (let item of list) {
-            document.getElementById(item).addEventListener("mouseover", () => {
-                hovered = item;
-                if (frame.src.split("/").pop() != item && !swapping) {
-                    swapping = true;
-                    swap(item);
-                }
+        function setActiveCard(projectName) {
+            cards.forEach(c => c.classList.remove("active"));
+            cards.forEach(c => {
+                if (c.dataset.project === projectName) c.classList.add("active");
             });
+            showcaseUrl.textContent = projectName;
         }
 
+        cards.forEach(card => {
+            card.addEventListener("mouseover", () => {
+                const project = card.dataset.project;
+                hovered = project;
+                if (frame.src.split("/").pop() !== project && !swapping) {
+                    swapping = true;
+                    setActiveCard(project);
+                    swap(project);
+                }
+            });
+
+            card.addEventListener("click", () => {
+                const project = card.dataset.project;
+                hovered = project;
+                if (frame.src.split("/").pop() !== project && !swapping) {
+                    swapping = true;
+                    setActiveCard(project);
+                    swap(project);
+                }
+            });
+        });
+
         function swap(item) {
-            clearTimeout(fading_out_timer);
-            clearTimeout(fading_in_timer);
+            clearInterval(fading_out_timer);
+            clearInterval(fading_in_timer);
             fade_out(frame);
         }
 
         function fade_in(el) {
             const spd = 10 / fade_time;
-            fading_in = setInterval(() => {
+            fading_in_timer = setInterval(() => {
                 if (el.style.opacity >= 1) {
                     swapping = false;
-                    clearTimeout(fading_in);
+                    clearInterval(fading_in_timer);
                 }
-                    el.style.opacity = String(Number(el.style.opacity) + spd);
+                el.style.opacity = String(Number(el.style.opacity) + spd);
             }, 10);
         }
 
@@ -64,22 +148,26 @@
             const spd = 10 / fade_time;
             fading_out_timer = setInterval(() => {
                 if (el.style.opacity <= 0) {
-                    index++
+                    index++;
                     if (hovered) {
-                        index = list.indexOf(hovered);
+                        index = projects.indexOf(hovered);
                         hovered = undefined;
-                    } else if (index >= list.length) {
+                    } else if (index >= projects.length) {
                         index = 0;
                     }
-                    el.src = list[index];
-                    clearTimeout(fading_out_timer);
+                    el.src = projects[index];
+                    clearInterval(fading_out_timer);
                     setTimeout(() => {
                         fade_in(el);
                     }, 300);
                 }
                 el.style.opacity = String(Number(el.style.opacity) - spd);
             }, 10);
-
         }
+
+        // Smooth scroll for the scroll hint
+        document.querySelector(".scroll-hint").addEventListener("click", () => {
+            document.querySelector(".projects").scrollIntoView({ behavior: "smooth" });
+        });
     </script>
 </html>
